// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`when rendering a table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-2:focus-visible {
  box-shadow: inset;
}

.emotion-2:last-child {
  padding-right: 24px;
}

.emotion-2:first-child {
  padding-left: 32px;
}

.emotion-2 * {
  font-size: 13px!important;
}

.emotion-2>div {
  height: unset;
  min-height: unset;
}

.emotion-2>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-4 *,
.emotion-4 p,
.emotion-4 a {
  line-height: 20px;
}

.emotion-4>*,
.emotion-4>div p {
  margin: 0 0 12px!important;
}

.emotion-4>div *:last-child,
.emotion-4>*:last-child {
  margin-bottom: 0!important;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
      data-lgid="lg-table"
    >
      <colgroup>
        <col
          style="width: 5%;"
        />
        <col
          style="width: 10%;"
        />
        <col
          style="width: 15%;"
        />
        <col
          style="width: 20%;"
        />
        <col
          style="width: 30%;"
        />
        <col
          style="width: 20%;"
        />
      </colgroup>
      <tbody>
        <tr
          class=""
          data-lgid="lg-table-row"
        >
          <td
            class="emotion-2"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                notebook
              </div>
            </div>
          </td>
          <td
            class="emotion-2"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                50
              </div>
            </div>
          </td>
          <td
            class="emotion-2"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            class="emotion-2"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                A
              </div>
            </div>
          </td>
          <td
            class="emotion-2"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                college-ruled,perforated
              </div>
            </div>
          </td>
          <td
            class="emotion-2"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                8
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`when rendering a table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
  position: relative;
  color: var(--font-color-primary);
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.dark-theme .emotion-2 {
  background-color: #001E2B;
  box-shadow: 0 4px #3D4F58;
}

.emotion-3 {
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
  width: auto;
}

.emotion-3 * {
  font-size: 13px!important;
}

.emotion-3>div {
  height: unset;
  min-height: unset;
}

.emotion-3 * {
  font-weight: 600!important;
}

.emotion-3 p {
  margin: 0!important;
}

.emotion-9:nth-of-type(even) {
  background-color: #F9FBFA;
}

.dark-theme .emotion-9:nth-of-type(even) {
  background-color: #112733;
}

.emotion-10 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  background-color: #F9FBFA;
  border-right: 3px solid #E8EDEB;
  font-weight: 600;
}

.emotion-10:focus-visible {
  box-shadow: inset;
}

.emotion-10:last-child {
  padding-right: 24px;
}

.emotion-10:first-child {
  padding-left: 32px;
}

.emotion-10 * {
  font-size: 13px!important;
}

.emotion-10>div {
  height: unset;
  min-height: unset;
}

.emotion-10>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-10 * {
  font-weight: 600!important;
}

.dark-theme .emotion-10 {
  background-color: #112733;
  border-right: 3px solid #3D4F58;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-12 *,
.emotion-12 p,
.emotion-12 a {
  line-height: 20px;
}

.emotion-12>*,
.emotion-12>div p {
  margin: 0 0 12px!important;
}

.emotion-12>div *:last-child,
.emotion-12>*:last-child {
  margin-bottom: 0!important;
}

.emotion-13 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-13:focus-visible {
  box-shadow: inset;
}

.emotion-13:last-child {
  padding-right: 24px;
}

.emotion-13:first-child {
  padding-left: 32px;
}

.emotion-13 * {
  font-size: 13px!important;
}

.emotion-13>div {
  height: unset;
  min-height: unset;
}

.emotion-13>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
      data-lgid="lg-table"
    >
      <thead
        class="emotion-2"
      >
        <tr
          data-testid="leafygreen-ui-header-row"
        >
          <th
            class="emotion-3"
            scope="col"
          >
            <div>
              name
            </div>
          </th>
          <th
            class="emotion-3"
            scope="col"
          >
            <div>
              quantity
            </div>
          </th>
          <th
            class="emotion-3"
            scope="col"
          >
            <div>
              size
            </div>
          </th>
          <th
            class="emotion-3"
            scope="col"
          >
            <div>
              status
            </div>
          </th>
          <th
            class="emotion-3"
            scope="col"
          >
            <div>
              tags
            </div>
          </th>
          <th
            class="emotion-3"
            scope="col"
          >
            <div>
              rating
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-9"
          data-lgid="lg-table-row"
        >
          <td
            class="emotion-10"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                journal
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                25
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                14x21,cm
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                A
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                brown, lined
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                9
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-9"
          data-lgid="lg-table-row"
        >
          <td
            class="emotion-10"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                notebook
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                50
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                A
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                college-ruled,perforated
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                8
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-9"
          data-lgid="lg-table-row"
        >
          <td
            class="emotion-10"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                paper
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                100
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                D
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                watercolor
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                10
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-9"
          data-lgid="lg-table-row"
        >
          <td
            class="emotion-10"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                planner
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                75
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                22.85x30,cm
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                D
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                2019
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                10
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-9"
          data-lgid="lg-table-row"
        >
          <td
            class="emotion-10"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                postcard
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                45
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                10x,cm
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                D
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                double-sided,white
              </div>
            </div>
          </td>
          <td
            class="emotion-13"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-12"
              >
                2
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
